--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "IA-Proyecto-3enemigos.sln"
+    "dotnet.defaultSolution": "ProyectoIA-3Enemigos.sln"
 }
